--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "numeral": "^2.0.6",
+    "color-scheme": "^1.0.1",
+    "d3": "^5.9.7",
+    "d3-force": "^2.0.1",
+    "material-icons": "^0.3.1",
+    "rxjs": "^7.5.5",
+    "axios": "^0.27.2",
+    "jss": "^9.8.7",
+    "jss-preset-default": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
