--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "d3-force": "^2.0.1",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
