--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
       "airbnb-typescript"
     ],
     "rules": {
+      "react/jsx-no-constructed-context-values": 0,
       "react/function-component-definition": 0,
       "object-curly-newline": [
         0
